corrrected sp machine name

--- a/src/metabox/lib/templates/vagrant/Vagrantfile
+++ b/src/metabox/lib/templates/vagrant/Vagrantfile
@@ -28,7 +28,7 @@ end
 if has_gem 
     require "metabox"
 else
-    metabox_api_path = File.absolute_path "#{METABOX_SRC_PATH}/lib/metabox.rb"
+    metabox_api_path = File.absolute_path "#{METABOX_SRC_PATH}/metabox/lib/metabox.rb"
     puts "METABOX: requiring Ruby script: #{metabox_api_path}"
     require metabox_api_path
 end
