--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,7 +6,7 @@ build_script:
   - pwd && ls -la
   - which ruby && ruby --version
   - rvm use 2.4.1 && which ruby && ruby --version
-  - rvm use 2.4.1 && cd ./src/metabox && gem build *.gemspec 
+  - rvm use 2.4.1 && ./build_gem.sh
 
 artifacts:
     - path: '**\metabox\*.gem'
